# Tactix

./: .gitignore  CLAUDE.md  pyproject.toml  run.py
scripts/: test_pitch_detection.py  train_ultralytics.py
src/tactix/: __init__.py  cli.py  config.py
src/tactix/analytics/: __init__.py
src/tactix/analytics/attacking/: __init__.py  buildup_tracker.py  pass_sonar.py  shot_map.py  zone_analyzer.py
src/tactix/api/: main.py
src/tactix/core/: __init__.py  events.py  geometry.py  keypoints.py  registry.py  types.py
src/tactix/engine/: __init__.py  system.py
src/tactix/export/: __init__.py  base.py  cache.py  json_exporter.py  pdf_exporter.py  stf_exporter.py
src/tactix/models/: __init__.py  hybrid_detector.py  rfdetr_impl.py  yolo_impl.py
src/tactix/semantics/: embedding_team.py  jersey_ocr.py  team.py
src/tactix/ui/: __init__.py  calibration.py  visualization_menu.py
src/tactix/utils/: generate_pitch.py  video_io.py
src/tactix/vision/: camera.py  detector.py  filters.py  tracker.py  transformer.py
src/tactix/visualization/: __init__.py  minimap.py
tactix/engine/: system.py
tactix/models/: hybrid_detector.py  interface.py  sam3_impl.py  yolo_impl.py
training/configs/: pitch_kpt_26.yaml
training/scripts/: convert_v15i_to_26pt.py  merge_datasets.py  train_model.py
training/train/: train_football.py  train_keypoints.py  train_rfdetr.py
viewer/: index.html
web/: demo_data.json  index.html  package-lock.json  package.json  vite.config.ts
web/scripts/: generate_demo_data.py
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/hooks/: useKeyboardShortcuts.ts
web/src/lib/: computeHeatmap.ts  computeVoronoi.ts
web/src/stores/: playbackStore.ts
web/src/types/: tracking.ts
(+58 files in other folders)
