[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tactix"
version = "0.1.0"
description = "Automated football tactical analysis engine using Computer Vision"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.12"
authors = [
    { name = "Xingnan Zhu" },
]
keywords = ["football", "soccer", "tactics", "computer-vision", "yolo", "tracking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "ultralytics>=8.0",
    "supervision>=0.18",
    "opencv-python>=4.8",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "tqdm",
    "reportlab>=4.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
ocr = ["easyocr>=1.7.1"]
embedding = ["transformers>=4.40", "umap-learn>=0.5", "torch>=2.0"]

[project.urls]
Homepage = "https://github.com/Dreaner/Tactix"
Repository = "https://github.com/Dreaner/Tactix"

[project.scripts]
tactix = "tactix.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tactix"]

[tool.hatch.build.targets.sdist]
include = [
    "src/tactix/",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]
exclude = [
    "assets/weights/",
    "assets/samples/",
    "assets/output/",
    "assets/tactical_cam_footage/",
    "datasets/",
    "training/",
    "notebooks/",
    "runs/",
    "docs/",
    "tools/",
]

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
